--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/boot
+spring.datasource.username=Admin
+spring.datasource.password=Demasik_2006
+spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.jpa.show-sql= true
+spring.jpa.generate-ddl=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.mvc.hiddenmethod.filter.enabled=true
