--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql= true
 spring.jpa.generate-ddl=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.mvc.hiddenmethod.filter.enabled=true
